<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <RelativeLayout
        style="@style/fill"
        android:layout_above="@+id/layoutBottom" >

        <RelativeLayout
            android:id="@+id/layoutTop"
            android:layout_width="fill_parent"
            android:layout_height="50dp" >

            <Button
                android:id="@+id/btnOverOperation"
                style="@style/login_button"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"

                android:background="@drawable/btn_cancel"
                android:text="@string/operation_over"
                android:textColor="#ffffffff" />

            <Button
                android:id="@+id/btnBack"
                style="@style/login_button"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/btn_login"
                android:text="@string/back_catgory" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="00"
                android:id="@+id/tvTableCode"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutGridView"
            style="@style/fill"
            android:layout_below="@+id/layoutTop" >

            <RelativeLayout
                android:id="@+id/layoutItemMaster"
                android:layout_width="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_height="210dp"
                android:orientation="vertical" >

                <AutoCompleteTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/etSearchInput"
                    android:layout_below="@+id/topGridView"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@+id/topGridView"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quick_code_switch_full_text"
                    android:id="@+id/swItemName"
                    android:textColor="@color/black"
                    android:layout_marginLeft="10dp"
                    android:layout_below="@+id/etSearchInput"
                    android:enabled="true" />

                <GridView
                    android:id="@+id/topGridView"
                    android:layout_width="fill_parent"
                    style="@style/fill"
                    android:cacheColorHint="#00000000"
                    android:listSelector="#00000000"
                    android:numColumns="4"

                    android:visibility="gone"/>

           </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutModify"
                android:layout_below="@id/layoutItemMaster"
                android:layout_width="fill_parent"
                android:layout_alignParentBottom="true"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/layoutYellow1"
                    style="@style/fill_wrap"
                    android:layout_alignParentTop="true"
                    android:background="@color/light_yellow" >
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="10dp"
                        android:background="@color/light_yellow"
                        />
                </RelativeLayout>

                <GridView
                    android:id="@+id/bottomGridView"
                    android:minHeight="66dp"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:cacheColorHint="#00000000"
                    android:listSelector="#00000000"
                    android:numColumns="4"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_above="@+id/layoutYellow"
                    android:layout_below="@+id/layoutYellow1"
                    android:background="@color/bg_color_gray" />

                <RelativeLayout
                    android:id="@+id/layoutYellow"
                    style="@style/fill_wrap"
                    android:layout_alignParentBottom="true"
                    android:background="@color/light_yellow" >

                    <Button
                        android:id="@+id/btnConfirm"
                        style="@style/login_button"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/btn_login"
                        android:text="@string/confirm" />
                </RelativeLayout>
            </RelativeLayout>




        </RelativeLayout>

        <com.everyware.handheld.view.ScrollLayout
            android:id="@+id/scrollLayout"
            style="@style/fill"
            android:layout_below="@+id/layoutTop"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutBottom"
        android:layout_width="fill_parent"
        android:layout_height="160dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white" >

        <ListView
            android:id="@+id/listView"
            style="@style/fill"
            android:layout_above="@+id/bottomRelativeLayout"
            android:cacheColorHint="#00000000"
            android:listSelector="#00000000" />

        <LinearLayout
            android:id="@+id/bottomRelativeLayout"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@color/light_blue"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btnkeyPan"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/btn_keypan" />

            <Button
                android:id="@+id/btnSendOrder"
                style="@style/login_button"
                android:layout_marginLeft="10dp"
                android:background="@drawable/btn_login"
                android:text="@string/send_order"
                android:layout_weight="0.84" />

            <LinearLayout
                style="@style/fill"
                android:orientation="horizontal"
                android:visibility="invisible"
                android:layout_width="23dp">

                <LinearLayout
                    android:layout_width="37dp"
                    android:layout_height="fill_parent"
                    android:gravity="right|center_vertical"
                    android:orientation="vertical" >

                    <TextView
                        style="@style/wrap"
                        android:text="@string/total"
                        android:textColor="@color/black"
                        android:textSize="14dp" />

                    <TextView
                        style="@style/wrap"
                        android:layout_marginTop="2dp"
                        android:text="@string/total_price"
                        android:textColor="@color/black"
                        android:textSize="18dp" />
                </LinearLayout>

                <LinearLayout
                    style="@style/wrap_fill"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tvTotal"
                        style="@style/wrap"
                        android:layout_marginLeft="30dp"
                        android:text="$0.00"
                        android:textColor="@color/black"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/tvTotalPrice"
                        style="@style/wrap"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="2dp"
                        android:text="$0.00"
                        android:textColor="@color/black"
                        android:textSize="18dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <include
        android:id="@+id/calculateLayout"
        layout="@layout/calculate_food_item"
        android:visibility="gone" />

</RelativeLayout>